--- a/ReferHelper/ReferHelper/Main.storyboard
+++ b/ReferHelper/ReferHelper/Main.storyboard
@@ -119,9 +119,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="lb4-53-v0H"/>
                     </view>
-                    <connections>
-                        <segue destination="aXQ-6m-J0t" kind="show" identifier="SignupDone" id="SPP-WX-tYC"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ilO-Yg-lTo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -186,39 +183,95 @@
                         <outlet property="_loginButton" destination="jXw-yT-Wcq" id="SWh-qO-eeo"/>
                         <outlet property="_password" destination="SMC-iz-2mj" id="oLK-pc-hGp"/>
                         <outlet property="_username" destination="yNI-oZ-Krv" id="aDD-Aa-pdx"/>
-                        <segue destination="aXQ-6m-J0t" kind="show" identifier="LoginDone" id="yuH-Rj-5dR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AsU-S1-XSL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2764" y="465.51724137931041"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="cbz-7k-zhV">
+        <!--Applicant-->
+        <scene sceneID="18N-5Q-wtB">
             <objects>
-                <viewController id="aXQ-6m-J0t" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Upc-rU-zhu">
+                <viewController id="UDP-11-gFc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bma-VQ-0w1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUW-V9-hyt">
-                                <rect key="frame" x="147" y="353.5" width="80" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="hUW-V9-hyt" firstAttribute="centerX" secondItem="IRI-ZU-FNT" secondAttribute="centerX" id="DU7-l6-vQH"/>
-                            <constraint firstItem="hUW-V9-hyt" firstAttribute="centerY" secondItem="IRI-ZU-FNT" secondAttribute="centerY" id="JPr-LZ-SeI"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="IRI-ZU-FNT"/>
+                        <viewLayoutGuide key="safeArea" id="xgC-El-PWW"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Applicant" id="NSi-8B-QZp"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wff-p4-zYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F5E-mr-ptN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3756" y="134"/>
+            <point key="canvasLocation" x="4817" y="-600"/>
+        </scene>
+        <!--Dashboard-->
+        <scene sceneID="9TA-ll-Ejz">
+            <objects>
+                <viewController id="g4B-mR-nlh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jcf-ci-gcR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="7au-4T-TkE"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Dashboard" id="KeB-WW-F1f"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uDd-0C-dV0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4817" y="-1280"/>
+        </scene>
+        <!--Main Tab View Controller-->
+        <scene sceneID="zlN-n3-Uun">
+            <objects>
+                <tabBarController storyboardIdentifier="MainTabViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5g7-MI-Xd6" customClass="MainTabViewController" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4iw-jX-qI1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="g4B-mR-nlh" kind="relationship" relationship="viewControllers" id="GXz-Gw-g0B"/>
+                        <segue destination="UDP-11-gFc" kind="relationship" relationship="viewControllers" id="S0O-dj-Cw7"/>
+                        <segue destination="PnY-PU-F88" kind="relationship" relationship="viewControllers" id="H41-wM-qrS"/>
+                        <segue destination="yOC-Qw-leZ" kind="relationship" relationship="viewControllers" id="CTc-JH-vIu"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cxd-Xt-egw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3703" y="134"/>
+        </scene>
+        <!--Referral-->
+        <scene sceneID="nVi-sI-bFi">
+            <objects>
+                <viewController id="PnY-PU-F88" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nhM-M8-6lc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="axW-QV-zZA"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Referral" id="ieR-k0-0cD"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U3m-uV-6K7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4817" y="66"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="uY0-U2-hbV">
+            <objects>
+                <viewController id="yOC-Qw-leZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M9A-e8-Ilj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="5OS-vs-acG"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="8Xa-7l-zoI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zcQ-Pv-CJU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4817" y="730"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GMF-aH-LyU">
@@ -236,14 +289,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0S-rB-eSs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="295" y="134"/>
         </scene>
     </scenes>
     <resources>
         <image name="icon" width="375" height="375"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yuH-Rj-5dR"/>
         <segue reference="eJy-l5-0Dd"/>
     </inferredMetricsTieBreakers>
 </document>
